changed local db to an aws db

--- a/Raszpberry_WEBAPI/appsettings.json
+++ b/Raszpberry_WEBAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "DBConnectionString": "Server=DESKTOP-OBKMFEP;Database=RASZ;TrustServerCertificate=true;Integrated Security=true"
+    "DBConnectionString": "Server=raszpberry-test-db.cp1ikcdokujf.us-east-1.rds.amazonaws.com,1433;Database=RBDB-Personal;User Id=admin;Password=Yonko2209;TrustServerCertificate=true;"
   }
 }
