--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
-  "name": "api_jobry",
+  "name": "api_jobry_express",
   "version": "1.0.0",
+  "description": "",
+  "keywords": [],
+  "homepage": "https://github.com/jobearry/api_jobry#readme",
+  "bugs": {
+    "url": "https://github.com/jobearry/api_jobry/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jobearry/api_jobry.git"
+  },
+  "license": "ISC",
+  "author": "Jobry",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -8,11 +21,6 @@
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "description": "",
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
