--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "ts-node src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node ./dist/index.js"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
