--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
-  },
-  "devDependencies": {
+    "swagger-ui-express": "^5.0.1",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.8",
+    "@types/swagger-ui-express": "^4.1.8"
+  },
+  "devDependencies": {
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
